--- a/style.css
+++ b/style.css
@@ -13,16 +13,19 @@ body{
 
 }
 
-.app{
+main{
     width: 100vw;
     height: 100vh;
     display: flex;
 }
 
-.favourite{
+nav{
     height: 100%;
     width: 15rem;
-    background-color: #333;
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgba(106, 109, 156, 0.37);
+    backdrop-filter: blur( 4.5px );
+    -webkit-backdrop-filter: blur( 4.5px );
 }
 
 .main{
@@ -44,10 +47,11 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #333;
-    border-radius: 1em;
-    border: 3px solid black;
-    filter: opacity(0.9) blur(1px);
+    background: rgba( 255, 255, 255, 0.15 );
+    box-shadow: 0 8px 32px 0 rgba(106, 109, 156, 0.37);
+    backdrop-filter: blur( 4.5px );
+    -webkit-backdrop-filter: blur( 4.5px );
+    border-radius: 10px;
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -95,11 +99,21 @@ body{
 }
 
 .icon{
+    color: #292929;
+    text-shadow: 1px rgba(255, 0, 0, 0.15);
     cursor: pointer;
     font-size: 25px;
 }
 .icon:hover{
     color:rgb(248, 209, 103);
+}
+
+.fa-solid{
+    color:rgb(248, 209, 103);
+}
+
+.hide{
+    display: none;
 }
 
 .buttons{
@@ -109,17 +123,72 @@ body{
 }
 
 #search{
-    
+    text-align: center;
     background-color: none;
     padding: 0 1em 5px 1em;
     background-color: transparent;
     outline: none;
     border: none;
     border-bottom: 2px solid #838383;
-    color:rgb(228, 228, 228);
+    color:#161616;
     font-size: 20px;
 }
 #searchButton{
+    color: rgb(228, 228, 228);
     padding: 0.5em 1em;
     cursor: pointer;
+    background-color: transparent;
+    border: 2px solid rgb(228, 228, 228);
+    border-radius: 7px;
+    transition: 200ms ease-in-out background-color;
+
+}
+
+#searchButton:hover{
+    transition: 200ms ease-in-out background-color;
+    background-color: #646464;
+}
+
+nav > .title{
+    color:#cfcfcf;
+    text-align: center;
+    padding: 2em 0;
+    font-size: 32px;
+}
+
+nav > table{
+    display: flex;
+    justify-content: center;
+}
+
+nav > table > tbody > tr{
+    color: #cfcfcf;
+    height: 50px;
+}
+
+nav > table > tbody > tr > td:nth-child(1){
+    padding: 0 1em 0 0;
+    font-size: 24px;
+}
+
+nav > table > tbody > tr > td:nth-child(2){
+    padding: 0 0 0 0.5em;
+    font-size: 20px;
+}
+
+.select-fav{
+    cursor: pointer;
+}
+.select-fav:hover{
+    color: rgb(145, 252, 172);
+}
+
+
+
+#delete{
+    cursor: pointer;
+}
+
+#delete:hover{
+    color: rgb(255, 106, 106);
 }
